MB-48399: Prevent shard count change of initialized magma bucket

Prevent the shard count of a magma bucket from changing by writing
a shard count to a file during first bucket initialization then
on subsequent initialization read that file and use the previously
persisted shard count.

Change-Id: I1961c2664ee397540169bd5e3fb7bb940a3b091d
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/161959
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>